# kraft

./: Cargo.toml  README.md  config.toml.sample  coverage  tarpaulin-report.html  test
.github/workflows/: rust.yml
proto/: Cargo.toml  README.md  build.rs
proto/proto/: raft.proto
proto/src/: lib.rs  raft.rs
raft/: Cargo.toml  README.md
raft-monitor/: Cargo.toml
raft-monitor/src/: main.rs
raft-monitor/src/rpc/: diagnostic.rs  mod.rs
raft/src/: cli.rs  config.rs  lib.rs
raft/src/election/: participants.rs
raft/src/network/: node.rs
raft/src/node/: base.rs  mod.rs
raft/src/rpc/: append_entries.rs  diagnostic.rs  heartbeat.rs  mod.rs  request_vote.rs
raft/src/storage/: mod.rs  state.rs  state_machine.rs
raft/src/utils/: io.rs  mod.rs  monitor.rs  test_utils.rs
src/: cli.rs  lib.rs
src/data/: FizzBuzz.rs  mod.rs
src/election/: mod.rs  participants.rs
src/network/: mod.rs  node.rs  pool.rs
src/rpc/: append_entries.rs  heartbeat.rs  mod.rs  request_vote.rs
src/storage/: backend.rs  mod.rs  persistent_state.rs  state_machine.rs
state_machine/: Cargo.toml
state_machine/src/: lib.rs
state_machine/src/impls/: key_value_store.rs  mod.rs
