[package]
name = "kraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
tokio = { version = "1.17.0", features = ["net", "time", "io-util", "rt", "macros", "rt-multi-thread"] }


[profile.release]
lto = "fat"