[package]
name = "kraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
rmp-serde = "1.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_millis = "0.1.1"
tokio = { version = "1.17.0", features = ["net", "time", "io-util", "rt", "macros", "rt-multi-thread"] }


[profile.release]
lto = "fat"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
