[package]
name = "raft-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio-tungstenite = { version = "0.17.2" }
log = { version = "0.4.17"}
simple_logger = { version = "2.2.0"}
tungstenite = { version = "0.17.2" }
futures = "0.3.21"
futures-channel = "0.3.21"
serde_json = { version = "1.0" }