[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
color-eyre = "0.6.1"
flate2 = "1.0.23"
futures = "0.3.21"
log = "0.4.16"
rmp-serde = "1.0.0"
serde = { version = "1.0.136", features = ["rc"]}
serde_derive = "1.0.136"
serde_millis = "0.1.1"
simple_logger = { version = "2.1.0", features = ["colors", "timestamps"] }
tokio = { version = "1.17.0", features = ["net", "time", "io-util", "rt", "macros", "rt-multi-thread", "sync", "fs"] }
proto = { path = "../proto" }
state_machine = { path = "../state_machine", features=["impls", "hashbrown"] }
tonic = "0.7.1"
bytes = "1.1.0"
anyhow = "1.0.57"
serde_json = "1.0.79"
